box/4.0/modules/ROOT/pages/box-connector-studio.adoc
= Box Studio Configuration - Mule 4
:page-aliases: connectors::box/box-connector-studio.adoc

You can use this connector in Anypoint Studio by first downloading it from Exchange and configuring it for your application.

Configure a connector in Anypoint Studio:

. Add the connector to your project.
. Configure the connector.
. Configure an input source for the connector.

== Add the Connector to Your Studio Project

Anypoint Studio provides two ways to add the connector to your Studio project: from the Exchange button in the Studio taskbar or from the Mule Palette view.

=== Add the Connector Using Exchange

. In Studio, create a Mule project.
. Click the Exchange icon *(X)* in the upper-left of the Studio task bar.
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for "box".
. Select the connector and click *Add to project*.
. Follow the prompts to install the connector.

=== Add the Connector in Studio

. In Studio, create a Mule project.
. In the Mule Palette view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type "box" in the search field.
. Click this connector's name in *Available modules*.
. Click *Add*.
. Click *Finish*.

== Configure the Connector

To use the Box connector in a Mule application, configure a global Box configuration element that can be used by as many Box connectors as you require for your application.

[%header,cols="30a,70a"]
|===
|Parameter|Description
|`clientId`|The client identifier as assigned by the authorization server when the client application was registered.
|`clientSecret`|The client application's client secret.
|`host`|The host where Box exposes its API.
|`port`|The port where Box services listen for incoming requests. Default: 443
|`basePath`|The base path of the Box services' base URI.
|`protocol`|The protocol that Box services follow. Default: `HTTPS`.
|`localCallbackPath`|The local callback path. Default: /callback
|`localCallbackConfig`|The HTTP Listener configuration that is used to configure the local authorization URL.
|`externalCallbackUrl`|The redirect URL that is configured in the client application.
|`localAuthorizationUrl`|Local authorization URL that is used to initiate an `OAuth2` dance.
|`authorizationUrl`|The authorization URL to request for an authorization code.
|`accessTokenUrl`|The access token URL to request for an access token.
|===

== Configure an Input Source

Configure an input source for the connector such as a an operation for the Box connector,
*HTTP Listener*, or *Scheduler*.
You can put the following operations for the connector in the *Source* area
of the Studio canvas.

*Configuration Name:* The configuration name for the Box connector global element.

*Host:* The host where Box exposes its API.

*Port:* The port where Box services listen for incoming requests.

*Base Path:* The base path of the Box service's base URI.

*Protocol:* The protocol that Box services follow.

*Client Id:* The client identifier assigned by the authorization server when the client application was registered.

*Client Secret:* The client application's client secret.

*Local Callback Path:* The local callback path.

*Local Callback Config:* The HTTP Listener configuration that is used to configure the local authorization URL.

*External Callback Url:* The redirect URL that is configured by the client application.

*Local Authorization Url:* The local authorization URL that is used to initiate an `OAuth2` dance.

*Authorization Url:* The authorization URL used to request an authorization code.

*Access Token Url:* The access token URL to request for an access token.

== Next Step

After configuring the connector for use in Studio,
see the xref:box-connector-config-topics.adoc[Additional Configuration Information] topic
for more configuration steps.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
