box/5.0/modules/ROOT/pages/box-connector-studio.adoc
= Configure Box Connector 5.0 Using Studio

You can use this connector in Anypoint Studio by first downloading it from Exchange and configuring it for your application.

Configure a connector in Anypoint Studio:

. Add the connector to your project.
. Configure the connector.
. Configure an input source for the connector.

== Add the Connector to Your Studio Project

Anypoint Studio provides two ways to add the connector to your Studio project: from the Exchange button in the Studio taskbar or from the Mule Palette view.

=== Add the Connector Using Exchange

. In Studio, create a Mule project.
. Click the Exchange icon *(X)* in the upper-left of the Studio task bar.
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for "box".
. Select the connector and click *Add to project*.
. Follow the prompts to install the connector.

=== Add the Connector in Studio

. In Studio, create a Mule project.
. In the Mule Palette view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type "box" in the search field.
. Click this connector's name in *Available modules*.
. Click *Add*.
. Click *Finish*.

== Configure the Connector

To use Box Connector in a Mule application, configure a global configuration element that can be used by as many Box Connectors as you require for your application.

Enter the following information in the *General* tab of the *Global Element Properties* screen to configure JWT authentication:

[%header,cols="30a,70a"]
|===
|Parameter|Description
|Client id|The client identifier as assigned by the authorization server when the client application was registered.
|Client secret|The client application's client secret.
|Public key id| The ID of the public key configured in your Box instance to authenticate the application.
|Entity id| The type of the entity ID: `EnterpriseId` or `UserId`.
|Box sub type| The box sub type: `enterprise` or `user`.
|Algorithm| The RSA encryption algorithm used to encrypt the private key.
|Keystore| The path to the keystore.
|Keystore type| The keystore type: `JKS` or `PKCS12`.
|Store password| The password of the keystore.
|Key alias| The alias that identifies the key.
|Key password| The key password.
|===

Enter the following information in the *General* tab of the *Global Element Properties* screen to configure Oauth2security authentication:

[%header,cols="30a,70a"]
|===
|Parameter|Description
|Consumer key| The OAuth consumer key, as registered with the service provider.
|Consumer secret| The OAuth consumer secret, as registered with the service provider.
|Listener config| The configuration for the HTTP listener that listens for requests on the access token callback endpoint.
|Callback path| The path of the access token callback endpoint.
|Authorize path| The path of the local HTTP endpoint that triggers the OAuth dance.
|===

== Configure an Input Source

Configure an input source for the connector such as a an operation for the Box connector,
*HTTP Listener*, or *Scheduler*.
You can put the following operations for the connector in the *Source* area
of the Studio canvas.

*Configuration Name:* The configuration name for the Box connector global element.

*Host:* The host where Box exposes its API.

*Port:* The port where Box services listen for incoming requests.

*Base Path:* The base path of the Box service's base URI.

*Protocol:* The protocol that Box services follow.

*Client Id:* The client identifier assigned by the authorization server when the client application was registered.

*Client Secret:* The client application's client secret.

*Local Callback Path:* The local callback path.

*Local Callback Config:* The HTTP Listener configuration that is used to configure the local authorization URL.

*External Callback Url:* The redirect URL that is configured by the client application.

*Local Authorization Url:* The local authorization URL that is used to initiate an `OAuth2` dance.

*Authorization Url:* The authorization URL used to request an authorization code.

*Access Token Url:* The access token URL to request for an access token.

== Next Step

After configuring the connector for use in Studio,
see the xref:box-connector-config-topics.adoc[Additional Configuration Information] topic
for more configuration steps.

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
